examples/qualification/executable_module_entry/negative_transitive_duplicate_symbol_collision/Semantic.package
format 1
package negative_transitive_duplicate_symbol_collision
manifest_dir .
module_root src
